--- a/sass/partials/_order-summary.scss
+++ b/sass/partials/_order-summary.scss
@@ -236,6 +236,7 @@ form.woocommerce-checkout .fc-wrapper #order_review table.woocommerce-checkout-r
 
 .fc-wrapper .fc-checkout-order-review__widgets-inside {
 	margin-top: $global-spacing-small;
+	margin-bottom: $global-spacing-small;
 }
 
 
